--- a/_posts/2026-01-25-test-post.md
+++ b/_posts/2026-01-25-test-post.md
@@ -13,5 +13,5 @@ This is a test post to check if I configured correctly the post section.
 
 Nothing to see here, move along
 
-![Notjing to see here](../assets/images/i2026-01-25_test_post/nothing_to_see_here.jpg "NTSH")
+![Image](../assets/images/i2026-01-25_test_post/nothing_to_see_here.jpg "NTSH")
 
