--- a/_posts/2026-01-25-test-post.md
+++ b/_posts/2026-01-25-test-post.md
@@ -7,7 +7,9 @@ header:
   teaser: "../assets/images/i2026-01-25_test_post/nothing_to_see_here.jpg"
 ---
 
-This is a test post to check if I configured correctly the post section.
+## Intro
+
+This is a test post to check that I configured correctly the post section.
 
 ## All done
 
