--- a/_posts/2026-01-25-test-post.md
+++ b/_posts/2026-01-25-test-post.md
@@ -15,5 +15,5 @@ This is a test post to check that I configured correctly the post section.
 
 Nothing to see here, move along
 
-![Image](../assets/images/i2026-01-25_test_post/nothing_to_see_here.jpg "NTSH")
+![Image](../assets/images/2026-01-25_test_post/nothing_to_see_here.jpg)
 
